<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="contentDescription"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="10dp"
    android:paddingStart="25dp"
    android:paddingEnd="20dp"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.DinActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin0_text"
                android:id="@+id/din_text_0"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_0"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin11_text"
                android:id="@+id/din_text_11"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_11"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin22_text"
                android:id="@+id/din_text_22"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_22"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin1_text"
                android:id="@+id/din_text_1"
                style="@style/pinText" />

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_1"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin12_text"
                android:id="@+id/din_text_12"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_12"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin23_text"
                android:id="@+id/din_text_23"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_23"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin2_text"
                android:id="@+id/din_text_2"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_2"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin13_text"
                android:id="@+id/din_text_13"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_13"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin24_text"
                android:id="@+id/din_text_24"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_24"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin3_text"
                android:id="@+id/din_text_3"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_3"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin14_text"
                android:id="@+id/din_text_14"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_14"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin25_text"
                android:id="@+id/din_text_25"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_25"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin4_text"
                android:id="@+id/din_text_4"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_4"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin15_text"
                android:id="@+id/din_text_15"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_15"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin26_text"
                android:id="@+id/din_text_26"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_26"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin5_text"
                android:id="@+id/din_text_5"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_5"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp" />

            <TextView

                android:text="@string/pin16_text"
                android:id="@+id/din_text_16"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_16"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin27_text"
                android:id="@+id/din_text_27"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_27"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin6_text"
                android:id="@+id/din_text_6"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_6"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin17_text"
                android:id="@+id/din_text_17"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_17"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin28_text"
                android:id="@+id/din_text_28"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_28"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin7_text"
                android:id="@+id/din_text_7"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_7"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin18_text"
                android:id="@+id/din_text_18"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_18"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin29_text"
                android:id="@+id/din_text_29"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_29"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin8_text"
                android:id="@+id/din_text_8"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_8"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin19_text"
                android:id="@+id/din_text_19"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_19"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin30_text"
                android:id="@+id/din_text_30"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_30"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:paddingStart="11dp">
            <TextView
                android:text="@string/pin9_text"
                android:id="@+id/din_text_9"
                style="@style/pinText"/>

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_9"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView

                android:text="@string/pin20_text"
                android:id="@+id/din_text_20"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_20"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


            <TextView
                android:text="@string/pin31_text"
                android:id="@+id/din_text_31"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_31"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp">
            <TextView
                android:text="@string/pin10_text"
                android:id="@+id/din_text_10"
                style="@style/pinText"
                />

            <ImageButton
                style="@style/pinImage"
                android:id="@+id/din_bt_10"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>

            <TextView
                android:text="@string/pin21_text"
                android:id="@+id/din_text_21"
                style="@style/pinText"/>

            <ImageButton
                android:id="@+id/din_bt_21"
                style="@style/pinImage"
                android:src="@drawable/uncheckbox_disable"
                android:layout_marginEnd="60dp"/>


        </LinearLayout>
    </LinearLayout>


</RelativeLayout>
